--- a/dattaContractExample1.yaml
+++ b/dattaContractExample1.yaml
@@ -1,3 +1,4 @@
+apiVersion: "myexample.com/v1"
 version: "1.0.0"
 standardVersion: "2.2.1"
 uuid: "0a1ee77f-d804-45a0-bc36-1076a626de3e"
@@ -6,7 +7,7 @@ type: "tables"
 status: "Development"
 server: "host.docker.internal"
 quantumName: "datacontract"
-kind: "managedDataset"
+kind: "DataContract"
 driverVersion: "42.6.0"
 driver: "org.postgresql.Driver"
 description: {}
