--- a/dattaContractExample1.yaml
+++ b/dattaContractExample1.yaml
@@ -6,3 +6,12 @@ spec:
   version: "1.2.0"
   standardVersion: "2.2.1"
   status: "Development"
+  username: "postgres"
+  type: "tables"
+  server: "host.docker.internal"
+  quantumName: "datacontract"
+  driverVersion: "42.6.0"
+  driver: "org.postgresql.Driver"
+  description: ""
+  datasetName: "datacontract"
+  database: "adventureworks"
